# projeto_banco

./: app.py  impostos.csv  impostos_export.xlsx  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: 1_📋Consulta.py
